<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="275dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="@string/title"
        android:textColor="#D500F9"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:hint="@string/name" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="60dp"
        android:text="Gender"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="45dp"
            android:layout_height="33dp"
            android:onClick="radioButtonhandler"
            android:text="M" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="45dp"
            android:layout_height="33dp"
            android:onClick="radioButtonhandler"
            android:text="F" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="96dp"
            android:layout_height="33dp"
            android:onClick="radioButtonhandler"
            android:text="Other" />
    </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <EditText
            android:id="@+id/current_weight"
            android:layout_width="164dp"
            android:layout_height="46dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/current_weight"
            android:inputType="number" />

        <EditText
            android:id="@+id/height"
            android:layout_width="157dp"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
    <EditText
        android:id="@+id/goal_weight"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:hint="@string/goal_weight"
        android:inputType="number"
         />
    <EditText
        android:id="@+id/age"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:hint="Age"
        android:inputType="number"
        />
    </LinearLayout>
    <EditText
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:hint="@string/phone"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLines="2"/>
    <CheckBox
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D500F9"
        android:buttonTint="#D500F9"
        android:text="@string/conditions"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D500F9"
        android:layout_gravity="center"
        android:onClick="submitbuttonHandler"
        android:text="SUBMIT"/>
</LinearLayout>